# oracle-duckdb-sync

./: .env.example  .gitignore  .mcp.json  IMPLEMENTATION_PHASE1_COMPLETE.md  IMPLEMENTATION_PHASE2_COMPLETE.md  README.md  VALIDATION_REPORT.md  agent_demo.py  architecture_detail.md  claude-skip-permissions.ps1  claude-skip-permissions.sh  codex_review_v1.md  gemini_review_v1.md  mac.mcp.json  plan.md  pre_migration_tests.txt  project_map.md  pyproject.toml  refactoring.md  sync_problem.md  ui_design_codex.md  ui_design_gemini.md  validate_code.py
.claude/: settings.json  settings.local.json
.gemini/: settings.json
.serena/: project.yml
backup/legacy_pages/: admin_menus.py  admin_tables.py
docs/: fastapi_plan.md  implementation_summary.md  prd.md  prd_main.md  ui_separation_architecture.md
docs/Phase 01/: plan01.md  prd01.md
docs/Phase 02/: architecture.md  plan02.md  prd02.md
docs/Phase 03/: plan03.md
docs/archive/: PHASE_04_COMPLETION.md  UI_ARCHITECTURE.md  frontend-tdd-best-practices.md  project_management.md  todo.md  ui_separation_summary.md
src/oracle_duckdb_sync/: __init__.py  app.py  config.py  data_converter.py  data_query.py  duckdb_source.py  logger.py  oracle_source.py  session_state.py  sync_engine.py  sync_state.py  sync_worker.py  ui_handlers.py  visualization.py
test/: check_versions.py  sqlnet.ora  test_001.py  test_config.py  test_data_converter.py  test_data_query.py  test_duckdb_source.py  test_e2e.py  test_logger.py  test_lttb.py  test_oracle_source.py  test_resource_cleanup.py  test_schema_version.py  test_state_file_manager.py  test_sync_engine.py  test_sync_state.py  test_visualization.py
test/application/: test_app_imports.py  test_cache_provider.py  test_imports.py  test_query_service.py
test/config/: test_config.py  test_config_imports.py
test/data/: test_cached_query_v2.py  test_data_converter.py  test_data_query.py  test_lttb.py  test_selective_conversion.py
test/database/: test_check_duckdb_tables.py  test_check_oracle_all_tables.py  test_check_oracle_tables.py  test_duckdb_source.py  test_e2e.py  test_incremental_sync_run.py  test_oracle_source.py  (+2 more)
(+111 files in other folders)
