[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-duckdb-sync"
version = "0.1.0"
description = "Oracle to DuckDB data synchronization and analysis dashboard"
requires-python = ">=3.9"
dependencies = [
    "oracledb>=3.4.1",
    "duckdb>=1.0.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.0.1",
    "apscheduler>=3.11.0",
    "streamlit>=1.52.2",
    "plotly>=6.5.0",
    "pandas>=2.3.3",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "e2e: End-to-end tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
